# intel-extension-for-pytorch

./: .bom  .buildinfo  .clang-format  .clang-tidy  .clang-tidy-oss  .flake8  .gitignore  .gitmodules  .lintrunner.toml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  THIRD-PARTY-PROGRAMS  THIRD-PARTY-PROGRAMS.txt  blogs.html  dependency_version.json  dependency_version.yml  genindex.html  index.html  index.md  latest  navigation.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.py  test_set_default_tensor_type.py  third-party-programs.txt  torch_ipex  version.txt  versions.html
csrc/: CMakeLists.txt  Event.cpp  Stream.cpp  log
csrc/aten/: CMakeLists.txt
csrc/aten/ATen/: ipex_type_dpcpp_customized.h
csrc/aten/amp/: autocast_mode.cpp
csrc/aten/core/: AllocationInfo.h  Allocator.cpp  Allocator.h  Array.h  CachingAllocator.cpp  CachingAllocator.h  CachingHostAllocator.cpp  CachingHostAllocator.h  Context.cpp  Context.h  DPCPP.h  DPCPPUtils.cpp  DPCPPUtils.h  Device.cpp  Device.h  DeviceProp.h  Event.cpp  Event.h  Exception.h  Functions.h  Generator.cpp  Generator.h  Guard.h  GuardImpl.cpp  GuardImpl.h  IntegerDivider.h  LazyInit.h  Macros.h  Memory.cpp  Memory.h  MemoryFormat.h  PreInitHook.h  Quantizer.h  Runtime.h  StorageImplUtils.cpp  Stream.cpp  Stream.h  TensorCopy.cpp  TensorCopy.h  TensorImplUtils.cpp  (+2 more)
csrc/aten/intrinsic/: ipex_intrinsic.h
csrc/aten/operators/: Activation.cpp  AdamW.cpp  AdaptiveAveragePooling2d.cpp  AdaptiveAveragePooling3d.cpp  AdaptiveMaxPooling2d.cpp  AdaptiveMaxPooling3d.cpp  AmpKernels.cpp  AveragePool2d.cpp  AveragePool3d.cpp  BatchKernel.h  BatchLinearAlgebra.cpp  BatchNorm.cpp  BinaryOps.cpp  BinaryOps_1.cpp  BinaryOps_2.cpp  BinaryOps_3.cpp  BinaryOps_4.cpp  BinaryOps_addsub.cpp  BinaryOps_bitwise.cpp  BinaryOps_div.cpp  BinaryOps_divfloor.cpp  BinaryOps_divfloor.h  BinaryOps_divtrunc.cpp  BinaryOps_divtrunc.h  BinaryOps_logical.cpp  BinaryOps_max.cpp  BinaryOps_min.cpp  BinaryOps_minmax.cpp  BinaryOps_mul.cpp  BinaryOps_muldiv.cpp  BinaryOps_numeric.cpp  BinaryOps_shift.cpp  BinaryOps_trig.cpp  BitonicMergeSort.h  BitonicSort.h  Blas.cpp  BlasImpl.h  Bucketization.cpp  Cat.cpp  Cat.h  (+203 more)
csrc/aten/quantized/: DeQuantization.cpp  QTensor.cpp  QTensor.h  QUtil.h  QUtils.cpp  QUtils.h  Quantization.cpp  Quantization.h  Quantizer.h
csrc/aten/tensor/: Context.cpp  OpaqueTensorFactories.cpp
csrc/aten/utils/: AccumulateType.h  Algorithm.h  Atomics.h  Context.cpp  Context.h  DPCPP.h  DPCPPUtils.cpp  DPCPPUtils.h  Device.cpp  Device.h  Exception.h  General.h  IntegerDivider.h  Macros.h  Math.cpp  MathReduce.h  Numerics.h  Pairwise.h  ParamUtils.h  Pointwise.h  Profiler.h  ScalarOps.h  Utils.h
csrc/autograd/: CMakeLists.txt  InferenceMode.cpp  InferenceMode.h
csrc/cpu/: CMakeLists.txt
csrc/cpu/aten/: AddLayerNorm.cpp  AddLayerNorm.h  AddSoftmax.cpp  AddSoftmax.h  AddSwish.cpp  AddSwish.h  AveragePool.cpp  AveragePool.h  BatchNorm.cpp  BatchNorm.h  CMakeLists.txt  Cast.cpp  CollectiveCommunicationPrimitive.cpp  CollectiveCommunicationPrimitive.h  ConcatBnRelu.cpp  ConcatBnRelu.h  Conv.cpp  Conv.h  ConvTranspose.cpp  ConvTranspose.h  Converter.cpp  Converter.h  Cumsum.cpp  Cumsum.h  DSMoE.cpp  DSMoE.h  Decode.cpp  Decode.h  DistributedMergedEmb.cpp  DivSoftmax.cpp  DivSoftmax.h  Eltwise.cpp  Eltwise.h  EmbeddingBag.cpp  EmbeddingBag.h  FP8Linear.cpp  FlashAttention.cpp  FlashAttention.h  Gemm.cpp  Gemm.h  (+69 more)
csrc/cpu/autocast/: CMakeLists.txt  autocast_kernels.cpp  autocast_kernels.h  autocast_mode.cpp  (+1 more)
csrc/distributed/: CMakeLists.txt  reducer.cpp
csrc/gpu/: CMakeLists.txt  _gpu
csrc/include/: CMakeLists.txt  Macros.h  Profiler.h  Settings.h  Stream.h
csrc/intrinsic/: intrinsic.h  ipex_intrinsic.h
csrc/itt/: CMakeLists.txt  itt_wrapper.cpp  itt_wrapper.h
csrc/jit/: CMakeLists.txt  README.md  accelerated_ops.h  auto_opt_config.h  dpcpp_ops.cpp  dpcpp_ops.h  fusion_pass.cpp  fusion_pass.h  initialization.cpp  initialization.h  register_dnnl_jit_ops.cpp  register_interface.cpp
csrc/oneDNN/: Attr.h  BatchNorm.h  Binary.h  Concat.h  Conv.h  Deconv.h  Eltwise.h  GRU.h  LRUCache.h  LSTM.h  LayerNorm.h  Matmul.h  Pooling.h  QConv.h  Reduce.h  Reorder.h  Resample.h  Runtime.h  SoftMax.h  Sum.h  Types.h  Utils.cpp  Utils.h  oneDNN.h
csrc/runtime/: CMakeLists.txt  CachingDeviceAllocator.cpp  CachingDeviceAllocator.h  CachingHostAllocator.cpp  CachingHostAllocator.h  Context.cpp  Context.h  DPCPP.h  DPCPPUtils.h  Device.cpp  Device.h  Env.cpp  Exception.h  Macros.h  Memory.cpp  Memory.h  Profiler.cpp  Profiler.h  Queue.cpp  Queue.h  Timer.h  Utils.cpp  Utils.h  oneMKLUtils.h
csrc/tensor/: CMakeLists.txt  Context.cpp  Context.h  OpaqueTensorFactories.cpp  OpaqueTensorFactories.h  Tensor.h
csrc/utils/: CMakeLists.txt  CustomOperatorRegistration.h  DPCPP.h  Env.cpp  Env.h  Helpers.cpp  Helpers.h  LRUCache.h  Macros.h  Profiler.cpp  Profiler.h  Settings.cpp  Settings.h  SimpleTrace.cpp  SimpleTrace.h  Timer.cpp  Timer.h  oneMKLUtils.cpp  oneMKLUtils.h
intel_extension_for_pytorch/csrc/: CMakeLists.txt  _C.cpp  _isa_help_main.cpp  init_python_bindings.cpp  init_python_bindings.h  initialization.cpp  initialization.h  py_init.cpp  version.h
ipex/csrc/: CMakeLists.txt  py_init.cpp  py_init.h
torch_ipex/csrc/: CMakeLists.txt  LlgaTensorImpl.cpp  LlgaTensorImpl.h  Storage.h  _C.cpp  aten_ipex_bridge.cpp  aten_ipex_bridge.h  aten_ipex_sparse_type_default.cpp  aten_ipex_tensor_type.h  aten_ipex_type.cpp  aten_ipex_type.h  aten_ipex_type_default.cpp  aten_ipex_type_default.h  aten_ipex_type_ext.cpp  aten_ipex_type_ext.h  auto_opt_config.h  auto_opt_config.hpp  autocast_kernel.cpp  autocast_kernel.hpp  autocast_mode.cpp  autocast_mode.h  autocast_verbose.cpp  autocast_verbose.h  dpcpp_allocator.cpp  dpcpp_allocator.h  init_python_bindings.cpp  init_python_bindings.h  ipex_sparse_tensor_impl.cpp  ipex_sparse_tensor_impl.h  ipex_tensor_impl.cpp  ipex_tensor_impl.h  library.h  py_init.cpp  py_init.h  rw_lock.h  sleef.h  utils.cpp  utils.h  verbose.cpp  verbose.hpp  (+2 more)
(+8249 files in other folders)
